package com.example.kauexam;

public interface RecyclerViewClickInterface {

    void onItemClick(int position);
    void onLongItemClick(int position);

}
