package com.example.kauexam;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class ScanqrActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_scanqr);
    }
}